Stats to the right of game board

--- a/webapp/mockups/app.css
+++ b/webapp/mockups/app.css
@@ -33,3 +33,13 @@
     height: 5vh;
     object-fit: contain;
 }
+
+
+#game-viewer {
+    display: flex;
+    flex-direction: row;
+}
+
+#game-viewer > div {
+    padding: 5vh;
+}
