--- a/webapp/mockups/app.css
+++ b/webapp/mockups/app.css
@@ -1,6 +1,36 @@
 body{
     background-color: lightgreen;
 }
+
+
+nav {
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    padding: 2vh;
+
+    background-color: darkgreen;
+    color: white;
+
+    font-size: 4vh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+}
+
+nav img {
+    height: 4vh;
+}
+
+footer {
+    text-align: center;
+    font-style: italic;
+}
+
+
+
+
+
 .game-square {
     user-select: none;
 
@@ -57,12 +87,10 @@ body{
 #game-viewer button {
     width: 49%;
     height: 3em;
+    cursor: pointer;
 }
 
 #gameboard {
     padding-bottom: 2vh;
 }
 
-#footer {
-    text-align: center;
-}
