--- a/webapp/mockups/app.css
+++ b/webapp/mockups/app.css
@@ -1,4 +1,5 @@
 body{
+    padding-top: 7vh;
     background-color: lightgreen;
 }
 
@@ -11,7 +12,6 @@ h1{
 li{
     margin-bottom: 10px;
 }
-
 
 nav {
     position: absolute;
@@ -37,10 +37,15 @@ nav img {
     height: 4vh;
 }
 
+.games{
+    margin-bottom: 10px;
+}
+
 footer {
     text-align: center;
     font-style: italic;
 }
+
 
 
 
