--- a/webapp/mockups/app.css
+++ b/webapp/mockups/app.css
@@ -18,7 +18,7 @@ nav {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100vw;
+    right: 0;
     height: 6vh;
 
     background-color: darkgreen;
