--- a/webapp/mockups/app.css
+++ b/webapp/mockups/app.css
@@ -1,3 +1,8 @@
+/* 
+Authors: Barry Nwike and Charles Nykamp
+Final Project CS257 F22
+ */
+
 body{
     background-color: lightgreen;
     padding-top: 6vh;
