--- a/webapp/mockups/mockup2.css
+++ b/webapp/mockups/mockup2.css
@@ -1,3 +1,9 @@
+/* 
+Authors: Barry Nwike and Charles Nykamp
+Final Project CS257 F22
+ */
+
+
 
 #game-heading {
     height: 6vh;
@@ -91,7 +97,8 @@
     border-width: 1wh;
     border-color: black;
     border: solid;
-    padding: 2vh;
+    padding-left: 1vw;
+    padding-top: 0vh;
 }
 
 #sidebar ol {
@@ -101,8 +108,6 @@
 
 #sidebar li {
     display: inline-flex;
-    /* width: 25%;
-    float: left; */
     padding: 0px;
     margin: 0px;
 }
