--- a/webapp/mockups/app.css
+++ b/webapp/mockups/app.css
@@ -5,7 +5,9 @@ Final Project CS257 F22
 
 body{
     padding-top: 7vh;
+    /* background-color: #161b22; */
     background-color: lightgreen;
+    /* background-color:#f1f1f1; */
     padding-top: 6vh;
     
     font-family: fantasy;
@@ -86,14 +88,14 @@ nav {
     right: 0;
     height: 6vh;
 
-    background-color: darkgreen;
+    background-color: #04AA6D;
     color: white;
 
     vertical-align: middle;
 
     font-size: 4vh;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    /* font-weight: bolder; */
 }
 
 nav a {
@@ -117,7 +119,5 @@ footer {
     text-align: center;
     font-style: italic;
 }
-
-
 
 
