--- a/webapp/mockups/mockup2.css
+++ b/webapp/mockups/mockup2.css
@@ -31,11 +31,12 @@ Final Project CS257 F22
     flex-wrap: wrap;
 }
 
-
-
-.left {
-    width: 45vw;
+.far-left {
+    width: 10vw;
 }
+/* .left {
+    width: 45vw;
+} */
 
 .panel {
     background-color: white;
@@ -51,19 +52,19 @@ Final Project CS257 F22
 
 
 #turn-panel {
-    display: flex;
+    /* display: flex; */
 }
 
 #turn-panel > * {
-    margin-right: 2vw;
+    /* margin-right: 2vw; */
 }
-
 
 
 
 
 #moves-panel ol {
     column-count: 3;
+    column-gap: 7em;
 }
 
 
