--- a/webapp/templates/game.html
+++ b/webapp/templates/game.html
@@ -20,7 +20,6 @@
 
         </p>
 
-
         <div class="centered">
 
             <h1>
@@ -99,19 +98,17 @@
                         <h3>Captured</h3>
 
                         <div class='captured'>
-                            <img src='../static/images/pawn-white.png' />
-                            <img src='../static/images/knight-white.png' />
-                            <img src='../static/images/pawn-white.png' />
-                            <img src='../static/images/pawn-white.png' />
-                            <img src='../static/images/queen-white.png' />
+                            <img src="{{ url_for('static', filename='images/pawn-white.png') }}" />
+                            <img src="{{ url_for('static', filename='images/knight-white.png') }}" />
+                            <img src="{{ url_for('static', filename='images/pawn-white.png') }}" />
+                            <img src="{{ url_for('static', filename='images/pawn-white.png') }}" />
+                            <img src="{{ url_for('static', filename='images/queen-white.png') }}" />
                             
                         </div>
         
         
                         <div class='captured'>
-                            <img src='../static/images/bishop-black.png' />
-                            <img src='../static/images/pawn-black.png' />
-                            <img src='../static/images/pawn-black.png' />
+                            <img src="{{ url_for('static', filename='images/bishop-black.png') }}" />
                         </div>
         
                     </div>
