--- a/webapp/templates/no_game_found.html
+++ b/webapp/templates/no_game_found.html
@@ -1,28 +1,9 @@
+{% extends "layout.html" %}
+{% block content %}
 
-<!DOCTYPE html>
-<html>
+<div class="centered panel">
+    <h1>We're sorry, there's no game found here.</h1>
+    <h3 class="centered"><a href="/">Take me to the homepage</a></h3>
+</div>
 
-    <head>
-        <title>Analychess</title>
-        <meta charset='UTF-8'>
-        <link rel="icon" href="{{ url_for('static', filename='/images/king-white.png') }}" type="image/icon type">
-        <link rel='stylesheet' type='text/css' href="{{ url_for('static', filename='app.css') }}" />
-    </head>
-
-
-    <body>
-
-        <nav><a href="/"><img src="{{ url_for('static', filename='images/king-white.png') }}"/>Analychess</a></nav>
-
-
-        <div class="centered panel">
-            <h1>We're sorry, there's no game found here.</h1>
-            <h3 class="centered"><a href="/">Take me to the homepage</a></h3>
-        </div>
-
-        <footer>Created by <a href='https://github.com/BNwike47'>Barry Nwike</a> and <a href='https://github.com/cqnykamp'>Charles Nykamp</a> for Carleton College Software Design Class, Fall 2022</footer>
-
-
-    </body>
-
-</html>
+{% endblock %}
