--- a/webapp/templates/no_game_found.html
+++ b/webapp/templates/no_game_found.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<div class="centered panel">
-    <h1>We're sorry, there's no game found here.</h1>
-    <h3 class="centered"><a href="/">Take me to the homepage</a></h3>
-</div>
+
+    <div class="vertically-centered-element">
+        <div class="centered panel extra-padding">
+            <h1>We're sorry, there's no game found here.</h1>
+            <h3 class="centered"><a href="/">Take me to the homepage</a></h3>
+        </div>
+    </div>
 
 {% endblock %}
