--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -42,7 +42,8 @@
     
     
 <div class = "games">
-    <hr />
+
+    <!-- <hr />
     <h2>Top Games of the Day:</h2>
     <ul style ="list-style: none;">
         <li> 
@@ -50,10 +51,10 @@
             <h3><a href="mockup2.html"><em>avocado</em> (1458) vs <em>Terry</em> (1522)</a></h3> 
         </li>
 
-    </ul>
+    </ul> -->
 
 
-    <div id="searchResults"></div>
+    <div id="searchResults" class="centered"></div>
 
 </div>
 
