Reorganize database so each game has up to four openings and also capturing/captured counts

--- a/webapp/templates/game.html
+++ b/webapp/templates/game.html
@@ -38,7 +38,7 @@
             <div class="panel">
                 <b>Winner:</b> {{ game_data.winner }}<br/>
                 <b>Victory status:</b> {{ game_data.victory_status }}<br/>
-                <b>Opening:</b> {{ game_data.opening_name }}<br/>
+                <b>Openings:</b> {{ game_data.opening_names }}<br/>
             </div>
             
             <div id="moves-panel" class="panel">
