--- a/webapp/static/app.css
+++ b/webapp/static/app.css
@@ -121,6 +121,7 @@ footer{
     background-color: white;
     margin-bottom: 2vh;
     padding: 0.5vw;
+    border: 0.01px solid;
 }   
 
 .panel h3 {
