--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -21,17 +21,17 @@
         
         <ul id = "filterList" style ="list-style: none;">
             <li> Username: 
-                <input id = "user_search">
+                <input id = "user_search" placeholder="ex: avocado">
             </li>
-            <li> Starting Move: 
-                <input id = "startmove_search">
+            <li> Opening moves: 
+                <input id = "startmove_search" placeholder="ex: e4 e5">
             </li>
             <li> # of Moves in Game: 
                 <input id = "movenumb_search">
             </li>
             <li> Rating between: 
-                <input id = "above_rate_search"> ~
-                <input id = "below_rate_search">
+                <input id = "below_rate_search"> ~
+                <input id = "above_rate_search">
             </li>  
             <div class="search">
                 <button id ="searchbutton" style="text-shadow: 100px;">Search</button>
